afbeeldingen los (met bladeren), alt-names naar array
